update upload img, delete img from product
