# product-service/docs/swagger.json
@@ -10,6 +10,36 @@
     "basePath": "/",
     "paths": {
         "/products": {
+            "get": {
+                "description": "Get all products with details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "product"
+                ],
+                "summary": "Get all products",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/product-service_internal_models.Product"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new product with details",
                 "consumes": [
@@ -29,7 +59,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/product-service_internal_models.Product"
+                            "$ref": "#/definitions/product-service_internal_models.CreateProductInput"
                         }
                     }
                 ],
@@ -124,7 +154,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/product-service_internal_models.Product"
+                            "$ref": "#/definitions/product-service_internal_models.UpdateProductInput"
                         }
                     }
                 ],
@@ -221,6 +251,28 @@
                 }
             }
         },
+        "product-service_internal_models.CreateProductInput": {
+            "type": "object",
+            "required": [
+                "name",
+                "price",
+                "stock"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "stock": {
+                    "type": "integer"
+                }
+            }
+        },
         "product-service_internal_models.Image": {
             "type": "object",
             "properties": {
@@ -276,6 +328,29 @@
                 },
                 "updatedAt": {
                     "type": "string"
+                }
+            }
+        },
+        "product-service_internal_models.UpdateProductInput": {
+            "type": "object",
+            "required": [
+                "description",
+                "name",
+                "price",
+                "stock"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "stock": {
+                    "type": "integer"
                 }
             }
         },
